[package]
name = "fltk-calendar-cn"
version = "0.4.0"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
description = "A calendar dialog for fltk-rs and Chinese users."
repository = "https://github.com/cstkingkey/fltk-calendar"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[lib]
name = "fltk_calendar"
path = "src/lib.rs"

[dependencies]
fltk = "1.4.0"
chrono = "0.4"